Add "update" & "delete" functionality for content items in server side...
