# api/src/Yorozu.Application/ContentItems/DeleteContentItem/DeleteContentItemCommand.cs
@@ -1,0 +1,6 @@
+using ErrorOr;
+using MediatR;
+
+namespace Yorozu.Application.ContentItems.DeleteContentItem;
+
+public record DeleteContentItemCommand(Guid Id) : IRequest<ErrorOr<Deleted>>;
