# api/src/Yorozu.Application/ContentItems/DeleteContentItem/DeleteContentItemCommandHandler.cs
@@ -1,0 +1,23 @@
+using ErrorOr;
+using MediatR;
+using Yorozu.Application.ContentItems.Common;
+using Yorozu.Common.Data;
+
+namespace Yorozu.Application.ContentItems.DeleteContentItem;
+
+internal class DeleteContentItemCommandHandler(
+    IContentItemRepository contentItemRepository,
+    IUnitOfWork unitOfWork
+) : IRequestHandler<DeleteContentItemCommand, ErrorOr<Deleted>>
+{
+    public async Task<ErrorOr<Deleted>> Handle(DeleteContentItemCommand request, CancellationToken cancellationToken)
+    {
+        var contentItem = await contentItemRepository.GetByIdAsync(request.Id, cancellationToken);
+        if (contentItem is null) return Error.NotFound();
+
+        contentItemRepository.Remove(contentItem);
+        await unitOfWork.SaveChangesAsync(cancellationToken);
+
+        return Result.Deleted;
+    }
+}
